--- a/Latex/Opazo_et_al2023/journaltemplate.tex
+++ b/Latex/Opazo_et_al2023/journaltemplate.tex
@@ -89,10 +89,9 @@ This section is optional. Include any Acknowledgments here.
 %% ------------------------------------------------------------------------ %%
 %% References and Citations
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-% \bibliography{<name of your .bib file>} don't specify the file extension
-%
+
+\bibliography{citas.bib} 
+
 % don't specify bibliographystyle
 
 % In the References section, cite the data/software described in the Availability Statement (this includes primary and processed data used for your research). For details on data/software citation as well as examples, see the Data & Software Citation section of the Data & Software for Authors guidance
