--- a/Latex/Opazo_et_al2023/Section/Methods.tex
+++ b/Latex/Opazo_et_al2023/Section/Methods.tex
@@ -7,9 +7,9 @@
 
 \subsection{General model description}
 
-We use a version of the Grid-ENabled Integrated Earth (GENIE) model focused on the carbon (C) cycle, cGENIE muffin v0.9, with three modules: (1) the 3D frictional-geostrophic ocean module, with 16 depth levels and a 36x36 equal-area horizontal grid (constant 10° in longitude and uniform in the sine of latitude), (2) marine biogeochemistry module BIOGEM (Ridgwell et al., 2007), and (3) an atmospheric component of the 2D energy-moisture balance model with prescribed climatological wind fields (Cao et al., 2009). The continental distribution and bathymetry are published in Ridgwell et al. (2007).
+We use a version of the Grid-ENabled Integrated Earth (GENIE) model focused on the carbon (C) cycle, cGENIE muffin v0.9, with three modules: (1) the 3D frictional-geostrophic ocean module, with 16 depth levels and a 36x36 equal-area horizontal grid (constant 10° in longitude and uniform in the sine of latitude), (2) marine biogeochemistry module BIOGEM \cite{ridgwell2007marine}, and (3) an atmospheric component of the 2D energy-moisture balance model with prescribed climatological wind fields \cite{cao2009role}. The continental distribution and bathymetry are published in \citeA{ridgwell2007marine}.
 
-For this study, we focused on the biological pump of soft tissues. For this purpose, a co-limitation scheme of iron (Fe) and phosphorus (P) to the C cycle was implemented following Tagliabue et al. (2016). Additionally, a simplified scheme of organic complexing, nutrient removal, and particulate organic C (POC) sink was implemented following the methodology proposed by Parekh et al. (2004, 2006). Table S1 in the Supporting Information summarizes the data sets and values used. The circulation model uses both parameterized temperature (van de Velde et al., 2021), salinity and 33 biogeochemical tracers to describe the interactions between nutrients. In order to make a correct C inventory, tracers and pre-formed nutrients were used following the base configuration of Cao et al. (2009).
+For this study, we focused on the biological pump of soft tissues. For this purpose, a co-limitation scheme of iron (Fe) and phosphorus (P) to the C cycle was implemented following Tagliabue et al. (2016). Additionally, a simplified scheme of organic complexing, nutrient removal, and particulate organic C (POC) sink was implemented following the methodology proposed by \citeA{parekh2004modeling,parekh2006physical}. Table S1 in the Supporting Information summarizes the data sets and values used. The circulation model uses both parameterized temperature (van de Velde et al., 2021), salinity and 33 biogeochemical tracers to describe the interactions between nutrients. In order to make a correct C inventory, tracers and pre-formed nutrients were used following the base configuration of Cao et al. (2009).
 
 In BIOGEM, C sequestration is controlled by biological export. The biogenic uptake of dissolved nutrients, tracers and inorganic C occurs in the ocean euphotic zone (upper 81 m). Remineralization by ocean bacteria (at a 590-m depth) results in dissolution (i.e., regeneration) of inorganic nutrients and C. Finally, the efficiency of the biological pump (P*) is defined in terms of the ratio of the regenerated (Preg) to total (Ptotal) P concentration: $P^{*} = P_{reg}/P_{total}$
 
@@ -23,7 +23,7 @@ Both P and Fe have low ocean concentrations in many ocean basins, and in order t
 \end{equation}
 \end{linenomath*}
 
-n cGENIE, the surface ocean is highly oxygenated and thus most of the Fe input is rapidly oxidized to Fe$^{3+}$ (Figure 2). Iron dissolution is a determining factor in photosynthesis and it will depend on water temperature, salinity, and pH. Total dissolved Fe (TDFe) will be composed of (1) free Fe (Fe$^{3+}_{free}$) and (2) ligand-bound Fe (Fe$^{3+}_{ligand}$). TDFe in the ocean is mostly present as  (~99\%), while Fe$^{3+}_{free}$ is the only species that is susceptible to be scavenged by POC and eliminated from the system when TDFe  is higher than the total concentration of ligands (L$_T$). In turn, L$_T$ consists of a free ligand component (L$_{free}$) and that associated to Fe (Fe$^{3+}_{ligand}$), and is invariant and uniform in the water column (0.1 nM) following Parekh et al. (2005) and Doney et al. (2006).
+In cGENIE, the surface ocean is highly oxygenated and thus most of the Fe input is rapidly oxidized to Fe$^{3+}$ (Figure 2). Iron dissolution is a determining factor in photosynthesis and it will depend on water temperature, salinity, and pH. Total dissolved Fe (TDFe) will be composed of (1) free Fe (Fe$^{3+}_{free}$) and (2) ligand-bound Fe (Fe$^{3+}_{ligand}$). TDFe in the ocean is mostly present as  (~99\%), while Fe$^{3+}_{free}$ is the only species that is susceptible to be scavenged by POC and eliminated from the system when TDFe  is higher than the total concentration of ligands (L$_T$). In turn, L$_T$ consists of a free ligand component (L$_{free}$) and that associated to Fe (Fe$^{3+}_{ligand}$), and is invariant and uniform in the water column (0.1 nM) following Parekh et al. (2005) and Doney et al. (2006).
 
 Finally, the Fe:C ratio is variable and parameterized to depend on TDFe, so that Fe requirements at the cellular level depend on Fe availability. Thus, under higher limitation, less Fe will be required and vice versa (a minimum ratio of 250,000 is imposed during maximum Fe limitation): 
 
@@ -35,7 +35,7 @@ Fe:c=\frac{1}{min(250,000,103,700 TDFe-0.4225)}
 
 \subsection{Experimental design}
 
-Six pairs of Holocene-Last Glacial Maximum (LGM) dust deposition rate fields were used as sources of soluble Fe to force cGENIE (for details see Lambert et al., 2021). One of these pairs (Lambert) is derived from paleo-dust observations compiled by Lambert et al. (2015), while the rest are derived from CMIP5 model simulations: Albani (Albani et al., 2014), Takemura (Takemura et al., 2009), Ohgaito (Ohgaito et al., 2018), MIROC-ESM (Sueyoshi et al., 2013) and MRI-CGCM3 (Yukimoto et al., 2012). 
+Six pairs of Holocene-Last Glacial Maximum (LGM) dust deposition rate fields were used as sources of soluble Fe to force cGENIE (for details see \citeA{lambert2021regional}. One of these pairs (Lambert) is derived from paleo-dust observations compiled by \citeA{lambert2015dust}, while the rest are derived from CMIP5 model simulations: Albani \cite{albani2014improved}, Takemura \cite{takemura2009simulation}, Ohgaito \cite{ohgaito2018effect}, MIROC-ESM \cite{sueyoshi2013set} and MRI-CGCM3 \cite{yukimoto2012new}. 
 
 Since the solubility of iron in dust is not well known, a sensitivity analysis was carried out by creating different dust iron solubility fields for each dust deposition rate field. To achieve this, we start by deriving a field of fractional Fe solubility ($\Upsilon_{Fesol}$, \%) in dust based on each of the twelve dust deposition rate fields described in the previous paragraph (i.e., six for the Holocene and six for the LGM), calculated as: 
 
